Correct class name, set proper gaps, add orange line to cards

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --light-blue: rgb(25,146,212);
     --sahdow-grey: rgb(158, 158, 158);
-
+    --orange: rgb(240,180,41);
 }
 
 * {
@@ -180,11 +180,17 @@
     padding: 15px;
 }
 
+.projects-section > p {
+    font-size: 1.2em;
+    margin: 5px 0;
+}
+
 .projects {
     grid-area: projects;
     display: grid;
+    grid-auto-rows: 1fr;
     grid-template-columns: 1fr 1fr;
-    gap: 15px;
+    gap: 20px;
 }
 
 .projects div,
@@ -194,6 +200,14 @@
     border-radius: 5px;
     padding: 15px;
     box-shadow: 2px 2px 2px var(--sahdow-grey);
+}
+
+div.project-card {
+    border-left: 5px solid var(--orange);
+}
+
+.project-card p {
+    font-size: 0.85em;
 }
 
 .announcements{
